# List_of_expenses_Django_API

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  readme.md
LOE/: asgi.py  settings.py  urls.py  wsgi.py
LOE/settings/: settings.py
LOE/settings/components/: database.py
LOE/settings/enviroments/: development.py
LOE2_0/: manage.py
LOE2_0/LOE2_0/: asgi.py  settings.py  urls.py  wsgi.py
LOE2_0/app_1_LOE2_0/: apps.py
config/: .env  .env.example
first/: models.py
first/migrations/: 0001_initial.py
