[tool.poetry]
name = "list-of-expenses"
version = "0.1.0"
description = "list of expenses"
authors = ["Alexandr <amkazennov99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
decouple = "^0.0.7"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
